# SEproject

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  test.cpp
.github/workflows/: ci.yml
include/: DatabaseManager.h  MonthlySummary.h  PaymentMethod.h  Summary.h  Transaction.h  TransactionManager.h
src/: DatabaseManager.cpp  DatabaseManager.h  MonthlySummary.cpp  PaymentMethod.h  Summary.cpp  Summary.h  Transaction.cpp  Transaction.h  TransactionManager.cpp  TransactionManager.h  main.cpp
tests/: fuzz_test.cpp  integration_tests.cpp  unit_tests.cpp
